--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -3,11 +3,17 @@
 $min-app-height: 300px;
 $min-app-width: 300px;
 
-html, body {
-  width: 100%;
+$z-index-nav-bar: 1000;
+$z-index-nav-bar-toggle-button: 1001;
+
+html {
   height: 100%;
-  min-height: $min-app-height;
-  min-width: $min-app-width;
+  overflow: auto;
+}
+
+body {
+  height: 100%;
+  overflow: auto;
 }
 
 body {
